# rB

./: .gitignore  ARCHITECTURE.markdown  BOOK_COVER_ART_FEATURE.md  BOOK_COVER_UX_IMPROVEMENTS.md  BOOK_EDITOR_CHAPTER_FIX.md  BOOK_MINTING_AND_COMMERCE_FIXES.md  BOOK_PREVIEW_FIX.md  CHANGELOG.md  CHAPTER_INVENTORY_FIX.md  CIRCLE_MIGRATION_FIXES.md  CIRCLE_SETUP_CHECKLIST.md  CIRCLE_WEBHOOK_SETUP.md  COMMANDS_CHEATSHEET.md  DEPLOYMENT_GUIDE.md  GUIDELINES.markdown  HYBRID_PAYMENT_ARCHITECTURE.md  INVITE_MODAL_FEATURE.md  LOCALHOST_TESTING.md  LOGOUT_AND_WEB3AUTH_FIXES.md  MVP_TEST_REPORT.md  NAVBAR_403_FIX.md  PAYMENT_FLOW_VERIFICATION.md  PERFORMANCE_IMPROVEMENTS.md  PREVIEW_MODAL_CLOSE_FIX.md  PRODUCTION_TEST_REPORT.md  PR_AND_CI_COMMANDS.md  QUICK_START_WEEK5_TO_WEEK6.md  README.md  README_WEEK5_COMPLETE.md  REQUIREMENTS.markdown  RISKS.markdown  SCOPE.markdown  SESSION_COOKIE_FIX.md  URGENT_FIXES_NEEDED.md  UX_COLLABORATION_ASSESSMENT.md  UX_TEST_REPORT_COLLABORATION.md  WALLET_SETUP_COMPLETE.md  WALLET_SETUP_FIXES.md  WEEK5_FINALIZATION.md  WEEK5_FINAL_COMPLETE.md  (+10 more)
backend/: .env  .env.production.example  CIRCLE_USER_CONTROLLED_SETUP.md  Procfile  check_wallets.py  cleanup_circle.py  db.sqlite3  db.sqlite3.bak  db.sqlite3.broken  delete_account.py  manage.py  process_pending_purchase.py  railway-worker.toml  requirements.txt  (+5 more)
blockchain/rb_contracts/programs/rb_contracts/: Cargo.toml
blockchain/rb_contracts/programs/rb_contracts/src/: lib.rs
blockchain/rb_contracts/programs/renaiss_block/: Cargo.toml
blockchain/rb_contracts/programs/renaiss_block/src/: lib.rs
(+653 files in other folders)
