[package]
name = "renaiss_block"
version = "0.1.0"
description = "renaissBlock Anchor program"
edition = "2021"

[lib]
name = "renaiss_block"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

